--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 description = "A feature complete Python text case conversion library."
 readme = { file = "README.md", content-type = "text/markdown" }
 license = { file = "LICENSE.md" }
-requires-python = ">=3.13"
+requires-python = ">=3.9"
 authors = [
     { name = "Nikita Gaziev", email = "zobweyt@gmail.com" },
 ]
@@ -24,6 +24,10 @@ classifiers = [
     "Programming Language :: Python",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3 :: Only",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3.13",
     "Topic :: Software Development",
     "Topic :: Software Development :: Libraries",
