--- a/.github/workflows/coverage.yaml
+++ b/.github/workflows/coverage.yaml
@@ -14,7 +14,7 @@ jobs:
       - name: Setup just
         uses: extractions/setup-just@v3
         with:
-          version: 1.34.0
+          just-version: 1.38.0
 
       - name: Setup uv
         uses: astral-sh/setup-uv@v5
