--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "textcase"
 version = "0.2.0"
-description = "A feature complete Python text case conversion library."
+description = "A feature-rich Python text case conversion library."
 readme = { file = "README.md", content-type = "text/markdown" }
 license = { file = "LICENSE.md" }
 requires-python = ">=3.9"
