--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -29,11 +29,6 @@ jobs:
         uses: astral-sh/setup-uv@v5
         with:
           version: 0.6.4
-      - run: echo "cache_id=$(date --utc '+%V')" >> $GITHUB_ENV
-      - uses: actions/cache@v4
-        with:
-          key: mkdocs-material-${{ env.cache_id }}
-          path: .cache
-          restore-keys: |
-            mkdocs-material-
-      - run: just docs-gh-deploy
+
+      - name: Deploy docs
+        run: just docs-gh-deploy
