docs: add docs links

--- a/docs/mkdocs.yaml
+++ b/docs/mkdocs.yaml
@@ -1,5 +1,6 @@
 site_name: textcase
 site_description: A feature-rich Python text case conversion library
+site_url: https://zobweyt.github.io/textcase
 
 theme:
   name: material
