--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,18 +48,22 @@ classifiers = [
 dependencies = []
 
 [project.urls]
-Homepage = "https://github.com/zobweyt/textcase"
-Documentation = "https://github.com/zobweyt/textcase"
+Homepage = "https://zobweyt.github.io/textcase"
+Documentation = "https://zobweyt.github.io/textcase"
 Repository = "https://github.com/zobweyt/textcase"
 Issues = "https://github.com/zobweyt/textcase/issues"
 Changelog = "https://github.com/zobweyt/textcase/blob/main/CHANGELOG.md"
 
 [dependency-groups]
 dev = [
+    "griffe-typingdoc>=0.2.8",
+    "mkdocs-material>=9.6.11",
+    "mkdocstrings[python]>=0.29.1",
     "mypy>=1.15.0",
     "pytest>=8.3.5",
     "pytest-cov>=6.0.0",
     "ruff>=0.11.2",
+    "termynal>=0.13.0",
 ]
 
 [tool.mypy]
