docs: add logo and favicon

--- a/docs/mkdocs.yaml
+++ b/docs/mkdocs.yaml
@@ -2,8 +2,11 @@ site_name: textcase
 site_description: A feature-rich Python text case conversion library
 site_url: https://zobweyt.github.io/textcase
 
+
 theme:
   name: material
+  logo: assets/favicon.white.svg
+  favicon: assets/favicon.svg
   palette:
     - media: (prefers-color-scheme)
       toggle:
