--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,8 @@ classifiers = [
     "Development Status :: 4 - Beta",
     "Intended Audience :: Developers",
     "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
+    "Natural Language :: English",
+    "Natural Language :: Russian",
     "Operating System :: OS Independent",
     "Programming Language :: Python",
     "Programming Language :: Python :: 3",
@@ -58,6 +60,7 @@ Changelog = "https://github.com/zobweyt/textcase/blob/main/CHANGELOG.md"
 dev = [
     "griffe-typingdoc>=0.2.8",
     "mkdocs-material>=9.6.11",
+    "mkdocs-static-i18n>=1.3.0",
     "mkdocstrings[python]>=0.29.1",
     "mypy>=1.15.0",
     "pytest>=8.3.5",
