--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,6 +59,7 @@ Changelog = "https://github.com/zobweyt/textcase/blob/main/CHANGELOG.md"
 [dependency-groups]
 dev = [
     "griffe-typingdoc>=0.2.8",
+    "markdown-exec[ansi]>=1.10.3",
     "mkdocs-material>=9.6.11",
     "mkdocs-static-i18n>=1.3.0",
     "mkdocstrings[python]>=0.29.1",
