--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,6 +61,7 @@ dev = [
     "griffe-typingdoc>=0.2.8",
     "markdown-exec[ansi]>=1.10.3",
     "mkdocs-material>=9.6.11",
+    "mkdocs-minify-plugin>=0.8.0",
     "mkdocs-static-i18n>=1.3.0",
     "mkdocstrings[python]>=0.29.1",
     "mypy>=1.15.0",
