--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,6 +60,8 @@ Changelog = "https://github.com/zobweyt/textcase/blob/main/CHANGELOG.md"
 dev = [
     "griffe-typingdoc>=0.2.8",
     "markdown-exec[ansi]>=1.10.3",
+    "mkdocs-git-committers-plugin-2>=2.5.0",
+    "mkdocs-git-revision-date-localized-plugin>=1.4.5",
     "mkdocs-material>=9.6.11",
     "mkdocs-minify-plugin>=0.8.0",
     "mkdocs-static-i18n>=1.3.0",
