--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,6 +58,12 @@ Changelog = "https://github.com/zobweyt/textcase/blob/main/CHANGELOG.md"
 
 [dependency-groups]
 dev = [
+    "mypy>=1.15.0",
+    "pytest>=8.3.5",
+    "pytest-cov>=6.0.0",
+    "ruff>=0.11.2",
+]
+docs = [
     "griffe-typingdoc>=0.2.8",
     "markdown-exec[ansi]>=1.10.3",
     "mkdocs-git-committers-plugin-2>=2.5.0",
@@ -66,12 +72,11 @@ dev = [
     "mkdocs-minify-plugin>=0.8.0",
     "mkdocs-static-i18n>=1.3.0",
     "mkdocstrings[python]>=0.29.1",
-    "mypy>=1.15.0",
-    "pytest>=8.3.5",
-    "pytest-cov>=6.0.0",
-    "ruff>=0.11.2",
     "termynal>=0.13.0",
 ]
+
+[tool.uv]
+default-groups = ["dev", "docs"]
 
 [tool.mypy]
 files = [
