--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -150,6 +150,20 @@ markdown_extensions:
       permalink: "#"
 
 extra:
+  analytics:
+    provider: google
+    property: G-D2KZPTT9KB
+    feedback:
+      title: Was this page helpful?
+      ratings:
+      - icon: material/emoticon-happy-outline
+        name: This page was helpful
+        data: 1
+        note: Thanks for your feedback!
+      - icon: material/emoticon-sad-outline
+        name: This page could be improved
+        data: 0
+        note: Thanks for your feedback!
   social:
     - icon: fontawesome/brands/python
       link: https://pypi.org/project/textcase
