--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -8,9 +8,6 @@ edit_uri: blob/main/docs/
 
 copyright: Copyright &copy; 2025 Nikita Gaziev
 
-watch:
-  - textcase
-
 theme:
   name: material
   logo: assets/favicon.white.svg
@@ -73,6 +70,7 @@ nav:
 
 plugins:
   - search
+  - social
   - minify:
       minify_html: true
       minify_js: true
