--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,6 +64,7 @@ dev = [
     "ruff>=0.11.2",
 ]
 docs = [
+    "cairosvg>=2.7.1",
     "griffe-typingdoc>=0.2.8",
     "markdown-exec[ansi]>=1.10.3",
     "mkdocs-git-committers-plugin-2>=2.5.0",
@@ -72,6 +73,7 @@ docs = [
     "mkdocs-minify-plugin>=0.8.0",
     "mkdocs-static-i18n>=1.3.0",
     "mkdocstrings[python]>=0.29.1",
+    "pillow>=11.1.0",
     "termynal>=0.13.0",
 ]
 
