docs: add textcase to sprase-checkout

--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -18,6 +18,7 @@ jobs:
           sparse-checkout: |
             docs
             includes
+            textcase
 
       - name: Configure Git Credentials
         run: |
