--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -151,6 +151,7 @@ markdown_extensions:
       permalink: "#"
 
 extra:
+  generator: false
   analytics:
     provider: google
     property: G-D2KZPTT9KB
