--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -5,7 +5,7 @@ description: "Create a report to help us improve"
 title: "bug: "
 
 labels:
-  - bug
+  - "type: bug"
 
 body:
   - type: markdown
@@ -18,7 +18,7 @@ body:
       label: Search for Existing Issues
       description: Before submitting a new bug, please ensure you search for existing ones to prevent duplicates.
       options:
-        - label: I've searched the [issues](https://github.com/zobweyt/textcase/issues?q=is%3Aissue+label%3Abug+sort%3Aupdated).
+        - label: I've searched the [issues](https://github.com/zobweyt/textcase/issues?q=is%3Aissue+label%3A%22type%3A%20bug%22+sort%3Aupdated).
           required: true
         - label: I've searched the [discussions](https://github.com/zobweyt/textcase/discussions).
           required: true
