--- a/.github/ISSUE_TEMPLATE/feature_request.yaml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yaml
@@ -2,10 +2,10 @@ name: "Feature request"
 
 description: "Suggest an idea for this project"
 
-title: "feat: "
+title: "feature: "
 
 labels:
-  - enhancement
+  - "type: feature"
 
 body:
   - type: markdown
@@ -18,7 +18,7 @@ body:
       label: Search for Existing Issues
       description: Before requesting a new feature, please ensure you search for existing ones to prevent duplicates.
       options:
-        - label: I've searched the [issues](https://github.com/zobweyt/textcase/issues?q=is%3Aissue+label%3Aenhancement+sort%3Aupdated).
+        - label: I've searched the [issues](https://github.com/zobweyt/textcase/issues?q=is%3Aissue+label%3A%22type%3A%20feature%22+sort%3Aupdated).
           required: true
         - label: I've searched the [discussions](https://github.com/zobweyt/textcase/discussions).
           required: true
