--- a/cliff.toml
+++ b/cliff.toml
@@ -17,7 +17,7 @@ body = """
 {% endif %}\
 
 {% for group, commits in commits | group_by(attribute="group") %}
-    ### {{ group | upper_first }}
+    ### {{ group | upper_first }} <!-- omit in toc -->
     {% for commit in commits %}
         - {{ commit.message | split(pat="\n") | first | trim }} ([`{{ commit.id | truncate(length=7, end="") }}`](https://github.com/zobweyt/textcase/commit/{{ commit.id }}))\
     {% endfor %}
