docs: optimize build
This commit optimizes build by moving the docs/assets/snippets folder to docs/.snippets and excludes docs/*. paths from docs build

--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -5,6 +5,7 @@ site_url: https://zobweyt.github.io/textcase/
 repo_name: zobweyt/textcase
 repo_url: https://github.com/zobweyt/textcase
 edit_uri: blob/main/docs/
+exclude_docs: .*
 
 copyright: Copyright &copy; 2025 Nikita Gaziev
 
@@ -57,7 +58,7 @@ theme:
   icon:
     repo: simple/github
   language: en
-  custom_dir: docs/templates
+  custom_dir: docs/.overrides
 
 nav:
   - Home: index.md
