--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,6 +59,7 @@ Changelog = "https://github.com/zobweyt/textcase/blob/main/CHANGELOG.md"
 [dependency-groups]
 dev = [
     "mypy>=1.15.0",
+    "pre-commit>=4.2.0",
     "pytest>=8.3.5",
     "pytest-cov>=6.0.0",
     "ruff>=0.11.2",
