chore: fix git-cliff whitespace before unreleased section

--- a/cliff.toml
+++ b/cliff.toml
@@ -19,7 +19,7 @@ body = """
     {% else -%}
         ## [{{ version }}]({{ remote_url }}/commits/{{ version }}) ({{ timestamp | date(format="%Y-%m-%d") }})
     {% endif -%}
-{% else -%}
+{% else %}
     ## Unreleased
 {% endif -%}
 
