--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "textcase"
-version = "0.2.3"
+version = "0.3.0"
 description = "A feature-rich Python text case conversion library."
 readme = { file = "README.md", content-type = "text/markdown" }
 license = { file = "LICENSE.md" }
@@ -17,6 +17,7 @@ keywords = [
     "constant-case",
     "conversion",
     "kebab-case",
+    "middot-case",
     "lower-case",
     "pascal-case",
     "sentence-case",
