--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -10,7 +10,8 @@ exclude_docs: .*
 copyright: Copyright &copy; 2025 Nikita Gaziev
 
 watch:
-  - textcase
+  - src
+  - tests
 
 theme:
   name: material
