ci: fix docs workflow

--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -17,7 +17,7 @@ jobs:
           fetch-depth: 0
           sparse-checkout: |
             docs
-            textcase
+            src
 
       - name: Configure Git Credentials
         run: |
