--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -4,6 +4,12 @@ on:
   push:
     branches:
       - main
+    paths:
+      - docs
+      - src
+      - CHANGELOG.md
+      - justfile
+      - mkdocs.yaml
 
 permissions:
   contents: write
