ci: fix workflows paths

--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -5,8 +5,8 @@ on:
     branches:
       - main
     paths:
-      - docs
-      - src
+      - docs/**
+      - src/**
       - CHANGELOG.md
       - justfile
       - mkdocs.yaml
