--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -5,16 +5,16 @@ on:
     branches-ignore:
       - main
     paths:
-      - src
-      - tests
+      - src/**
+      - tests/**
       - justfile
       - uv.lock
   pull_request:
     branches-ignore:
       - main
     paths:
-      - src
-      - tests
+      - src/**
+      - tests/**
       - justfile
       - uv.lock
 
