--- a/.github/workflows/coverage.yaml
+++ b/.github/workflows/coverage.yaml
@@ -5,8 +5,8 @@ on:
     branches:
       - main
     paths:
-      - src
-      - tests
+      - src/**
+      - tests/**
       - justfile
       - uv.lock
 
