--- a/.github/workflows/coverage.yaml
+++ b/.github/workflows/coverage.yaml
@@ -5,9 +5,11 @@ on:
     branches:
       - main
     paths:
+      - .github/workflows/coverage.yaml
       - src/**
       - tests/**
       - justfile
+      - pyproject.toml
       - uv.lock
 
 jobs:
@@ -27,9 +29,7 @@ jobs:
           version: 0.6.4
 
       - name: Run coverage
-        run: |
-          uv sync
-          just coverage
+        run: just coverage
 
       - name: Upload coverage
         uses: coverallsapp/github-action@v2
