--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -5,11 +5,13 @@ on:
     branches:
       - main
     paths:
+      - .github/workflows/docs.yaml
       - docs/**
       - src/**
       - CHANGELOG.md
       - justfile
       - mkdocs.yaml
+      - pyproject.toml
       - uv.lock
 
 permissions:
