--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -25,6 +25,14 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version:
+          - 3.9
+          - 3.10
+          - 3.11
+          - 3.12
+          - 3.13
     steps:
       - uses: actions/checkout@v3
 
@@ -37,6 +45,7 @@ jobs:
         uses: astral-sh/setup-uv@v5
         with:
           version: 0.6.4
+          python-version: ${{ matrix.python-version }}
 
-      - name: Run test
+      - name: Run test with Python version ${{ matrix.python-version }}
         run: just test
