--- a/.github/workflows/preview.yaml
+++ b/.github/workflows/preview.yaml
@@ -28,6 +28,11 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Configure Git Credentials
+        run: |
+          git config user.name github-actions[bot]
+          git config user.email 41898282+github-actions[bot]@users.noreply.github.com
+
       - name: Setup just
         uses: extractions/setup-just@v3
         with:
