--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -21,6 +21,9 @@ updates:
       - "priority: medium"
       - "dependencies: uv"
     open-pull-requests-limit: 1
+    groups:
+      deps:
+        applies-to: "version-updates"
 
   - package-ecosystem: "github-actions"
     directory: "/"
@@ -42,3 +45,6 @@ updates:
       - "priority: medium"
       - "dependencies: github-actions"
     open-pull-requests-limit: 5
+    groups:
+      deps:
+        applies-to: "version-updates"
