--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -23,6 +23,7 @@ updates:
     open-pull-requests-limit: 1
     groups:
       deps:
+        patterns: "*"
 
   - package-ecosystem: "github-actions"
     directory: "/"
@@ -46,3 +47,4 @@ updates:
     open-pull-requests-limit: 5
     groups:
       deps:
+        patterns: "*"
