--- a/pyproject.toml
+++ b/pyproject.toml
@@ -67,6 +67,7 @@ dev = [
 ]
 docs = [
     "cairosvg>=2.7.1",
+    "git-cliff>=2.10.1",
     "griffe-typingdoc>=0.2.8",
     "mkdocs-git-committers-plugin-2>=2.5.0",
     "mkdocs-git-revision-date-localized-plugin>=1.4.5",
