docs: enable social plugin in CI only

--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -71,7 +71,8 @@ nav:
 
 plugins:
   - search
-  - social
+  - social:
+      enabled: !ENV [CI, false]
   - autorefs:
       resolve_closest: true
   - i18n:
