--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -71,7 +71,8 @@ nav:
 
 plugins:
   - search
-  - social
+  - social:
+      enabled: !ENV [CI, false]
   - autorefs:
       resolve_closest: true
   - i18n:
@@ -105,6 +106,7 @@ plugins:
             extensions:
               - griffe_typingdoc
             filters:
+              - "!^_[^_]"
               - "!^__all__"
             annotations_path: source
             docstring_section_style: spacy
